# R-Cario

./: .gitignore  CNNTraining.ipynb  CNNTraining.py  Datacreate.py  JawClench_labels_Ansh_12-02-21-1918.txt  JawClench_labels_Ansh_12-02-21-1930.txt  OpenBCI-RAW-2021-12-02_19-19-33.txt  OpenBCI-RAW-2021-12-02_19-19-53.txt  OpenBCI-RAW-2021-12-02_19-31-12.txt  README.md  best_so_far.joblib  bestactionclassifierFor0.joblib  bestnaclassifierFor0.joblib  bluetooth-test.ipynb  calibration.ipynb  collect.py  combinedKNN  createTrainingData.py  datacreate_demo.ipynb  filename.joblib  find_movements.py  fourierPlot.py  fouriertransform.ipynb  labeler.py  lstmNew.ipynb  main.py  preprocess_data.py  prod_action.joblib  prod_non_selector.joblib  pyproject.toml  requirements.txt  stuff.ipynb  svmnew.ipynb  svmtest.ipynb  svmtest2.ipynb  trainExample.py  trainInfo.py  trainKnn.py
Arduino/: BluetoothCarControl.ino
Classifier/: GBDecisionTree.py  basic_CNN_arch.py  example.py  knn.py  knnGrouped.py  knn_channel_grouping.py  knn_fft.py  spectogram_cnn.py
Classifier/Saved_Models/: prod_action_XGB_NAFeature.joblib  prod_non_selector_XGB.joblib
Classify/: CNNClassify.ipynb  CNNClassify.py  classify.py  example.py
Misc/: createTrainingData.py  find_movements.py
RC_Controller/: Controller.py
RealTime_Capture/: Capture.py  data.txt
Recordings/Labels/: SH_LE  SH_LF2  SH_RE  (+5 more)
Training/: DataCreateNew.py  DataCreateUpdated.py  Datacreate.py  Datacreate_knn.py  FeatureExtractFunctions.py  Preprocess.py  record.py  trainExample.py  trainKnn.py  trainKnnFft.py  trainSpectograms.py
(+86 files in other folders)
