[tool.poetry]
name = "rcario"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.9, <=3.7.11"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scipy = "^1.7.1"
sklearn = "^0.0"
pandas = "^1.3.3"
pyserial = "^3.5"
brainflow = "^4.6.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
